Change log started August 2009.

June 2010
================================================================================
Backup files must now be wrapped in processBase64Zcode('') so that local file loading will work on Chrome.

May 2010
================================================================================
Completely rewrote line and char input.

April 2010
================================================================================
Fixed undo support, now with multi-undo support.
Added a few fixes for various mobile browsers.
Fixed Enter and arrow key support in menus.

March 2010
================================================================================
 + Zarf made many changes to Gnusto to remove signed data from the memory, and correct for overflows etc.
 + Simplified file.download_to_array(). Cross origin requests are no longer made.
 + If an array is passed to download_to_array() the second element is treated as a backup base64 file.
 + Fixed some problems in Gnusto caused by refering to engine rather than this.
 + The launch_zmachine() callback now runs in two stages, in case it is run prematurely.
 + Fix page up/down support.

February 2010
================================================================================
 - Removed jquery.mousewheel.js and associated event handlers, and switched back to normal scrolling.
 - The uncompressed packages shouldn't be stored in git. Moved them to .build/
 + Move FatalError.prototype.onError from web-zui.js to error-handling.js so we can display errors before web-zui.js is loaded.
 + file.download_to_array() now uses a proxy server if it needs to.
 + Update to jQuery 1.4.2.
 + Updated Gnusto with the fix for the illegal object number bug.
 
January 2010
================================================================================
 + Added launch_zmachine() which launches the Z-Machine, late downloading the files it needs. (library.js)
 + Rearranged the packages to create zmachine.js.